syntax = "proto3";

option java_multiple_files = true;
option java_package = "de.innovationhub.prox.keycloak.kafka.data";
option java_outer_classname = "AdminEventData";

message AuthDetails {
  optional string client_id = 1;
  optional string ip_address = 2;
  optional string realm_id = 3;
  optional string user_id = 4;
}


// As per https://javadoc.io/doc/org.keycloak/keycloak-events-api/latest/index.html
enum OperationType {
  ACTION = 0;
  CREATE = 1;
  DELETE = 2;
  UPDATE = 3;
}

message AdminEvent {
  string realm_id = 1;
  optional AuthDetails auth_details = 2;
  OperationType operation_type = 3;
  uint64 time = 4;

  optional string representation = 5;
  optional string error = 6;
}
